Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MostSpecific16.out
MostSpecific16.java:17:9: compiler.err.ref.ambiguous: m1, kindname.method, m1(MostSpecific16.F1), MostSpecific16, kindname.method, m1(MostSpecific16.F2), MostSpecific16
1 error
